@@ -1,4 +1,5 @@
 1.0.0 (currently working on)
+- [#4008] Change: Use the single view link builder class in the FE and BE
 - [#4005] Feature: Add a single view link builder class
 - [#4006] Feature: Add getters for the single view page to the category and event type model
 - [#4009] Change: The OldModels should provide the Mapper with the data to reduce double DB requests
